# libss2022-client

./: .gitmodules  CMakeLists.txt
cmake/: ss2022-client.pc.in
include/: ss2022_client.h
src/: ss2022_context.c  ss2022_internal.h  ss2022_kdf_blake3.c
src/crypto/: ss2022_wolf_aead.c  ss2022_wolf_aes.c  ss2022_wolf_rng.c
src/proto/: ss2022_addr.c  ss2022_time.c
src/tcp/: ss2022_tcp_client.c
src/udp/: ss2022_replay_window.c  ss2022_udp_client.c
src/util/: ss2022_endian.c
tests/: test_basic.c
